fix flicker via set height

--- a/app/styles/components/navigation.scss
+++ b/app/styles/components/navigation.scss
@@ -7,6 +7,7 @@
     position: absolute;
     z-index: 100;
     width: 100%;
+
     a {
         color: $white;
         margin-left: 16px;
@@ -31,6 +32,7 @@
         justify-content: space-between;
         align-items: center;
         padding: 15px 0;
+        height: 100px;
         .logo-wrapper-blue, .logo-wrapper-white {
             position: relative;
         }
